Sat May  8 10:53:30 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_open): open should not ignore block when "to_open"
	  method is used.  [ruby-dev:23478]

Fri May  7 22:07:39 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mv): new option `force'. [ruby-talk:99457]

	* lib/fileutils.rb: new method for command option reflection:
	  FileUtils.commands, .options, .have_option?, .options_of,
	  .collect_methods.

	* lib/fileutils.rb: module Verbose, NoWrite, DryRun do not have
	  option flags @fileutils_verbose and @fileutils_noop, they make no
	  sense.

Fri May  7 21:50:21 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::parse_include): Allow
	  multiple arguments to 'include'

Fri May  7 21:03:51 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (fu_list): Array() breaks pathes including "\n".
	  [ruby-core:02843]

	* test/fileutils/test_fileutils.rb (mkdir): test "\n" in path.

Fri May  7 20:53:25 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dbm/dbm.c (fdbm_modify): typo fixed. [ruby-dev:23473]

Fri May  7 11:17:27  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* util.c (ruby_strtod): 0.0000000000000000001 == 0.0 should be false.
	  [ruby-talk:99318] [ruby-dev:23465]

Thu May  6 22:27:32 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* ext/socket/socket.c (ippaddr): use NUMERICHOST if can not resolve
	  hostname.

Thu May  6 22:09:29 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tkutil.c (get_eval_string_core): bug fix. [ruby-dev:23466]

Thu May  6 14:22:29 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml/rubytypes.rb (to_yaml): added instance variable handling
	  for Ranges, Strings, Structs, Regexps.

	* lib/yaml/rubytypes.rb (to_yaml_fold): new method for setting a 
	  String's flow style.

	* lib/yaml.rb (YAML::object_maker): now uses Object.allocate.

	* ext/syck/gram.c: fixed transfer methods on structs, broke it
	  last commit.
