@@ -1,3 +1,7 @@
+Sun May  9 12:34:26 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>
+
+	* regex.c : removed unused file.
+
 Sat May  8 10:53:30 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* io.c (rb_f_open): open should not ignore block when "to_open"
